// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CompanyDetail.vue (Vitest) > renders company data correctly 1`] = `
"<div data-v-86b7be70="" class="company-detail">
  <div data-v-86b7be70="" class="content">
    <div data-v-86b7be70="" class="header">
      <h1 data-v-86b7be70="">Acme Corporation</h1>
      <div data-v-86b7be70="" class="meta"><span data-v-86b7be70="" class="country">United Kingdom</span><span data-v-86b7be70="" class="founded">Founded: 15/05/2010</span><span data-v-86b7be70="" class="status active">Active</span></div>
    </div>
    <div data-v-86b7be70="" class="description">
      <h2 data-v-86b7be70="">About</h2>
      <p data-v-86b7be70="">A leading technology company specializing in innovative solutions.</p>
    </div>
    <div data-v-86b7be70="" class="employees">
      <h2 data-v-86b7be70="">Employees (2)</h2>
      <div data-v-86b7be70="" class="employee-grid">
        <div data-v-86b7be70="" class="employee-card">
          <h3 data-v-86b7be70="">John Smith</h3>
          <p data-v-86b7be70="" class="job-title">Software Engineer</p>
          <p data-v-86b7be70="" class="contact"><a data-v-86b7be70="" href="mailto:john.smith@acme.com">john.smith@acme.com</a><span data-v-86b7be70="">+44 123 456 7890</span></p>
        </div>
        <div data-v-86b7be70="" class="employee-card">
          <h3 data-v-86b7be70="">Jane Doe</h3>
          <p data-v-86b7be70="" class="job-title">Product Manager</p>
          <p data-v-86b7be70="" class="contact"><a data-v-86b7be70="" href="mailto:jane.doe@acme.com">jane.doe@acme.com</a><span data-v-86b7be70="">+44 123 456 7891</span></p>
        </div>
      </div>
    </div>
    <div data-v-86b7be70="" class="deals">
      <h2 data-v-86b7be70="">Deals</h2>
      <div data-v-86b7be70="" class="deals-list">
        <div data-v-86b7be70="" class="deal-card">
          <div data-v-86b7be70="" class="amount">£1,000,000</div>
          <div data-v-86b7be70="" class="date">15/01/2023</div>
        </div>
        <div data-v-86b7be70="" class="deal-card">
          <div data-v-86b7be70="" class="amount">£2,500,000</div>
          <div data-v-86b7be70="" class="date">20/06/2023</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`CompanyDetail.vue (Vitest) > renders company without deals correctly 1`] = `
"<div data-v-86b7be70="" class="company-detail">
  <div data-v-86b7be70="" class="content">
    <div data-v-86b7be70="" class="header">
      <h1 data-v-86b7be70="">Acme Corporation</h1>
      <div data-v-86b7be70="" class="meta"><span data-v-86b7be70="" class="country">United Kingdom</span><span data-v-86b7be70="" class="founded">Founded: 15/05/2010</span><span data-v-86b7be70="" class="status active">Active</span></div>
    </div>
    <div data-v-86b7be70="" class="description">
      <h2 data-v-86b7be70="">About</h2>
      <p data-v-86b7be70="">A leading technology company specializing in innovative solutions.</p>
    </div>
    <div data-v-86b7be70="" class="employees">
      <h2 data-v-86b7be70="">Employees (2)</h2>
      <div data-v-86b7be70="" class="employee-grid">
        <div data-v-86b7be70="" class="employee-card">
          <h3 data-v-86b7be70="">John Smith</h3>
          <p data-v-86b7be70="" class="job-title">Software Engineer</p>
          <p data-v-86b7be70="" class="contact"><a data-v-86b7be70="" href="mailto:john.smith@acme.com">john.smith@acme.com</a><span data-v-86b7be70="">+44 123 456 7890</span></p>
        </div>
        <div data-v-86b7be70="" class="employee-card">
          <h3 data-v-86b7be70="">Jane Doe</h3>
          <p data-v-86b7be70="" class="job-title">Product Manager</p>
          <p data-v-86b7be70="" class="contact"><a data-v-86b7be70="" href="mailto:jane.doe@acme.com">jane.doe@acme.com</a><span data-v-86b7be70="">+44 123 456 7891</span></p>
        </div>
      </div>
    </div>
    <!--v-if-->
  </div>
</div>"
`;

exports[`CompanyDetail.vue (Vitest) > renders company without employees correctly 1`] = `
"<div data-v-86b7be70="" class="company-detail">
  <div data-v-86b7be70="" class="content">
    <div data-v-86b7be70="" class="header">
      <h1 data-v-86b7be70="">Acme Corporation</h1>
      <div data-v-86b7be70="" class="meta"><span data-v-86b7be70="" class="country">United Kingdom</span><span data-v-86b7be70="" class="founded">Founded: 15/05/2010</span><span data-v-86b7be70="" class="status active">Active</span></div>
    </div>
    <div data-v-86b7be70="" class="description">
      <h2 data-v-86b7be70="">About</h2>
      <p data-v-86b7be70="">A leading technology company specializing in innovative solutions.</p>
    </div>
    <!--v-if-->
    <div data-v-86b7be70="" class="deals">
      <h2 data-v-86b7be70="">Deals</h2>
      <div data-v-86b7be70="" class="deals-list">
        <div data-v-86b7be70="" class="deal-card">
          <div data-v-86b7be70="" class="amount">£1,000,000</div>
          <div data-v-86b7be70="" class="date">15/01/2023</div>
        </div>
        <div data-v-86b7be70="" class="deal-card">
          <div data-v-86b7be70="" class="amount">£2,500,000</div>
          <div data-v-86b7be70="" class="date">20/06/2023</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`CompanyDetail.vue (Vitest) > renders error state correctly 1`] = `
"<div data-v-86b7be70="" class="company-detail">
  <div data-v-86b7be70="" class="error">Failed to load company details</div>
</div>"
`;

exports[`CompanyDetail.vue (Vitest) > renders inactive company correctly 1`] = `
"<div data-v-86b7be70="" class="company-detail">
  <div data-v-86b7be70="" class="content">
    <div data-v-86b7be70="" class="header">
      <h1 data-v-86b7be70="">Acme Corporation</h1>
      <div data-v-86b7be70="" class="meta"><span data-v-86b7be70="" class="country">United Kingdom</span><span data-v-86b7be70="" class="founded">Founded: 15/05/2010</span><span data-v-86b7be70="" class="status">Inactive</span></div>
    </div>
    <div data-v-86b7be70="" class="description">
      <h2 data-v-86b7be70="">About</h2>
      <p data-v-86b7be70="">A leading technology company specializing in innovative solutions.</p>
    </div>
    <div data-v-86b7be70="" class="employees">
      <h2 data-v-86b7be70="">Employees (2)</h2>
      <div data-v-86b7be70="" class="employee-grid">
        <div data-v-86b7be70="" class="employee-card">
          <h3 data-v-86b7be70="">John Smith</h3>
          <p data-v-86b7be70="" class="job-title">Software Engineer</p>
          <p data-v-86b7be70="" class="contact"><a data-v-86b7be70="" href="mailto:john.smith@acme.com">john.smith@acme.com</a><span data-v-86b7be70="">+44 123 456 7890</span></p>
        </div>
        <div data-v-86b7be70="" class="employee-card">
          <h3 data-v-86b7be70="">Jane Doe</h3>
          <p data-v-86b7be70="" class="job-title">Product Manager</p>
          <p data-v-86b7be70="" class="contact"><a data-v-86b7be70="" href="mailto:jane.doe@acme.com">jane.doe@acme.com</a><span data-v-86b7be70="">+44 123 456 7891</span></p>
        </div>
      </div>
    </div>
    <div data-v-86b7be70="" class="deals">
      <h2 data-v-86b7be70="">Deals</h2>
      <div data-v-86b7be70="" class="deals-list">
        <div data-v-86b7be70="" class="deal-card">
          <div data-v-86b7be70="" class="amount">£1,000,000</div>
          <div data-v-86b7be70="" class="date">15/01/2023</div>
        </div>
        <div data-v-86b7be70="" class="deal-card">
          <div data-v-86b7be70="" class="amount">£2,500,000</div>
          <div data-v-86b7be70="" class="date">20/06/2023</div>
        </div>
      </div>
    </div>
  </div>
</div>"
`;

exports[`CompanyDetail.vue (Vitest) > renders loading state correctly 1`] = `
"<div data-v-86b7be70="" class="company-detail">
  <div data-v-86b7be70="" class="loading"> Loading... </div>
</div>"
`;
